--- a/Main/Main.vcxproj
+++ b/Main/Main.vcxproj
@@ -115,6 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\main.c" />
+    <ClCompile Include="..\vc.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\vc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
